--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "vue-editorjs",
-  "version": "1.0.0",
+  "name": "@junhao/vue-editorjs",
+  "version": "0.1.2",
   "description": "Editor js wrapping component",
-  "main": "dist/index.js",
+  "keywords": [
+    "editor",
+    "editorjs",
+    "vue.js",
+    "vue-editorjs"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/changjunhao/vue-editorjs.git"
+  },
+  "author": "Junhao Chang<ward_1992@msn.cn>",
+  "license": "MIT",
+  "main": "dist/vue-editorjs.js",
   "scripts": {
     "build": "webpack --config webpack.pord.js",
     "dev": "webpack-dev-server --config webpack.dev.js --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@editorjs/editorjs": "^2.14.0"
   },
