--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@junhao/vue-editorjs",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "Editor js wrapping component",
   "keywords": [
     "editor",
@@ -21,34 +21,34 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@editorjs/editorjs": "^2.19.1"
+    "@editorjs/editorjs": "^2.23.2"
   },
   "peerDependencies": {
     "@editorjs/checklist": "^1.3.0",
-    "@editorjs/code": "^2.6.0",
+    "@editorjs/code": "^2.7.0",
     "@editorjs/delimiter": "^1.2.0",
-    "@editorjs/embed": "^2.4.0",
-    "@editorjs/header": "^2.6.1",
-    "@editorjs/image": "^2.6.0",
+    "@editorjs/embed": "^2.5.0",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/image": "^2.6.2",
     "@editorjs/inline-code": "^1.3.1",
-    "@editorjs/link": "^2.3.1",
-    "@editorjs/list": "^1.6.1",
+    "@editorjs/link": "^2.4.0",
+    "@editorjs/list": "^1.6.2",
     "@editorjs/marker": "^1.2.2",
     "@editorjs/paragraph": "^2.8.0",
     "@editorjs/quote": "^2.4.0",
     "@editorjs/raw": "^2.3.0",
-    "@editorjs/table": "^1.3.0",
-    "@editorjs/warning": "^1.2.0",
-    "vue": "^2.6.12"
+    "@editorjs/table": "^2.0.1",
+    "@editorjs/warning": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@vue/compiler-sfc": "3.2.30",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12",
+    "vue": "^3.2.30",
+    "vue-loader": "^17.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
