--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@junhao/vue-editorjs",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Editor js wrapping component",
   "keywords": [
     "editor",
@@ -41,16 +41,17 @@
     "@editorjs/warning": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.12.11",
-    "@vue/compiler-sfc": "3.2.30",
+    "@vue/compiler-sfc": "3.2.31",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^4.5.0",
-    "vue": "^3.2.30",
+    "clean-webpack-plugin": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "vue": "^3.2.31",
     "vue-loader": "^17.0.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
